# mentor-agent

./: .gitignore  fix-validate-story-mode.md  plan.md
mentor-agent-service/: .dockerignore  .env.example  .gitignore  Dockerfile  MIGRATION.md  alembic.ini  docker-compose.yml  providers.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
mentor-agent-service/alembic/: env.py
mentor-agent-service/alembic/versions/: 001_create_users_table.py  002_create_sessions_table.py  003_create_knowledge_graph_tables.py
mentor-agent-service/app/: config.py  dependencies.py  main.py  models.py
mentor-agent-service/app/prompts/: mentor_system_prompt.md
mentor-agent-service/app/repositories/: graph_repo.py  progress_repo.py  user_repo.py
mentor-agent-service/app/routers/: chat.py
mentor-agent-service/app/schemas/: chat.py
mentor-agent-service/app/services/: agent_service.py  graph_service.py  llm_service.py  prompt_service.py  quiz_service.py
mentor-agent-service/app/tools/: __init__.py  definitions.py  echo_tool.py  extract_relationships_tool.py  learning_plan_tool.py  registry.py  search_knowledge_base_tool.py
mentor-agent-service/app/utils/: sse_generator.py
mentor-agent-service/scripts/: bootstrap-env.sh
mentor-agent-service/tests/: conftest.py  test_doubles.py  test_health.py
mentor-agent-service/tests/integration/: test_chat_completions.py  test_extract_relationships_integration.py  test_graph_integration.py  test_learning_plan_integration.py  test_migration.py  test_persona_behavior_contract.py  test_rag_tool_integration.py  test_sse_status_flow.py  (+1 more)
(+76 files in other folders)
